Implementação da interface TaxService

--- a/CarRentalWithInterfaces/CarRentalWithInterfaces.csproj
+++ b/CarRentalWithInterfaces/CarRentalWithInterfaces.csproj
@@ -42,8 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\CarRental.cs" />
+    <Compile Include="Entities\Invoice.cs" />
+    <Compile Include="Entities\Vehicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BrazilTaxService.cs" />
+    <Compile Include="Services\ITaxService.cs" />
+    <Compile Include="Services\RentalService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
