--- a/PrinterWithInterface/PrinterWithInterface.csproj
+++ b/PrinterWithInterface/PrinterWithInterface.csproj
@@ -42,7 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Devices\ComboDevice.cs" />
     <Compile Include="Devices\Device.cs" />
+    <Compile Include="Devices\IPrinter.cs" />
+    <Compile Include="Devices\IScanner.cs" />
     <Compile Include="Devices\Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
